--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles/player.css">
+    <link rel="shortcut icon" href="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,800">
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -11,7 +12,7 @@
   </head>
   <body class="page">
     <article class="player page__article"> </article>
-    <script src="scripts/player.js"></script>
+    <script src="scripts/player.js" async></script>
     <script type="text/babel" src="scripts/player.jsx"></script>
   </body>
 </html>
