--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body class="page">
     <article class="player page__article"> </article>
-    <script type="text/babel" src="scripts/player.jsx" defer></script>
-    <script src="scripts/player.js" defer></script>
+    <script type="text/babel" src="scripts/player.jsx"></script>
+    <script src="scripts/player.js"></script>
   </body>
 </html>
